# image-reader-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PROJECT.md  README.md  biome.json  package.json  server.json  tsconfig.json
.changeset/: read-image-v0-1.md
.doctrine/: project.json
.github/workflows/: ci.yml
benchmark-artifacts/: image_reader_release_gate.json
crates/image-reader-cli/: Cargo.toml
crates/image-reader-cli/src/: main.rs
crates/image-reader-core/: Cargo.toml
crates/image-reader-core/src/: envelope.rs  exif.rs  lib.rs  metadata.rs  read_image.rs
crates/image-reader-mcp-server/: Cargo.toml
crates/image-reader-mcp-server/src/: http_transport.rs  lib.rs  main.rs  read_image.rs  tool_routes.rs
docs/adr/: 0001-boundary.md  ADR-3-mcp-family-sota-roadmap.md
docs/roadmap/: sota-family-roadmap.md
docs/specs/: migration-ledger.json  non-llm-read-stack.md  operating-model.md
examples/: metadata-only-request.json  ocr-request.json  sample-agent-media-twin.json
scripts/: check-no-ts-stdio-mcp.sh  check-ts-adapter-deletion-ready.sh  release-gate.ts  stage-rust-mcp.ts
src/: doctor-cli.ts  doctor.ts  index.ts
src/engine/: rust-decode.ts
src/handlers/: readImage.ts
src/schemas/: readImage.ts
src/utils/: errors.ts  metadata.ts  ocr.ts  pathUtils.ts  safety.ts
test/: doctor.test.ts  errors.test.ts  httpTransport.matrix.test.ts  metadata.test.ts  pathUtils.test.ts  readImageHandler.test.ts  readImageSchema.test.ts  readmeDiscovery.test.ts  releaseGate.test.ts  rustDecode.boundary.test.ts  safety.test.ts  shippedPath.matrix.test.ts  tsAdapterDeletion.matrix.test.ts
