[package]
name = "image-reader-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JSON CLI for image-reader-core"

[[bin]]
name = "image-reader-cli"
path = "src/main.rs"

[dependencies]
image-reader-core = { path = "../image-reader-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"