[package]
name = "image-reader-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust image probe, hash, and decode engine for image-reader-mcp"

[lib]
path = "src/lib.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "tiff", "bmp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
kamadak-exif = "0.6"

[dev-dependencies]
tempfile = "3.20.0"
image = { version = "0.25", default-features = false, features = ["png"] }